<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/backdrop"
        android:src="@drawable/backdrop"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/btn_travel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/travel"
        android:src="@drawable/ic_baseline_map_48"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_travel"
        app:layout_constraintStart_toStartOf="@+id/btn_travel"
        app:layout_constraintTop_toBottomOf="@+id/btn_travel" />

    <ImageButton
        android:id="@+id/btn_hotel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/hotel"
        android:src="@drawable/ic_baseline_hotel_48"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_hotel"
        app:layout_constraintStart_toStartOf="@+id/btn_hotel"
        app:layout_constraintTop_toBottomOf="@+id/btn_hotel" />

    <ImageButton
        android:id="@+id/btn_food"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/food"
        android:src="@drawable/ic_baseline_fastfood_48"
        app:layout_constraintStart_toStartOf="@+id/btn_travel"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_food"
        app:layout_constraintStart_toStartOf="@+id/btn_food"
        app:layout_constraintTop_toBottomOf="@+id/btn_food" />

    <ImageButton
        android:id="@+id/btn_event"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/event"
        android:src="@drawable/ic_baseline_event_48"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_event"
        app:layout_constraintStart_toStartOf="@+id/btn_event"
        app:layout_constraintTop_toBottomOf="@+id/btn_event" />

    <ImageButton
        android:id="@+id/btn_accommodation"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/accommodation"
        android:src="@drawable/ic_baseline_directions_car_48"
        app:layout_constraintStart_toStartOf="@+id/btn_food"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accommodation"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_accommodation"
        app:layout_constraintStart_toStartOf="@+id/btn_accommodation"
        app:layout_constraintTop_toBottomOf="@+id/btn_accommodation" />

    <ImageButton
        android:id="@+id/btn_about"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/about"
        android:src="@drawable/ic_baseline_info_48"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_about"
        app:layout_constraintStart_toStartOf="@+id/btn_about"
        app:layout_constraintTop_toBottomOf="@+id/btn_about" />

</androidx.constraintlayout.widget.ConstraintLayout>